[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "truvity-sso-sdk"
version = "0.1.0"
description = "Python client for the SSO administration API"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "PyJWT[crypto]>=2.8",
    "requests>=2.31",
]

[tool.hatch.build.targets.wheel]
packages = ["src/truvity_sso"]
